--- a/01-dom-concept.html
+++ b/01-dom-concept.html
@@ -1,6 +1,14 @@
-<div id="output"></div>
 <script>
     let output
     output = document.getElementById("output")
     output.innerHTML = "Hi There!"
 </script>
+
+<div id="output"></div>
+
+<!-- <script>
+    let output
+    output = document.getElementById("output")
+    output.innerHTML = "Hi There!"
+</script> -->
+
